fixed the inconsistent card width issue using flex basis on the second section of the page and also fixed the overlapping of two sibling div contents using height 50%

--- a/style.css
+++ b/style.css
@@ -1,7 +1,75 @@
-body{
+body, button{
     font-family: 'Cute Font', cursive;
     font-family: 'Montserrat', sans-serif;
     font-family: 'Open Sans Condensed', sans-serif;
     font-family: 'Poppins', sans-serif;
     font-family: 'Roboto Slab', serif;
+}
+section{
+    display: flex;
+}
+h1{
+    font-size: 55px;
+    font-weight:700;
+}
+.half-width{
+    width: 50%;
+    padding: 100px;
+}
+img{
+    width: 90%;
+}
+.violet-color{
+    color: violet;
+}
+.button-link{
+    background: linear-gradient(violet,cyan);
+    color: navy;
+    padding: 10px 40px;
+    border-radius: 10px;
+    font-weight: 600;
+    
+}
+#left-border-color{
+    border-left:5px solid;
+    border-image: linear-gradient(violet,cyan);
+    border-image-slice: 1;
+    padding-left: 20px;
+}
+.centered-parent-div{
+    /* text-align: center; */
+    gap: 45px;
+    flex-shrink: 2;
+    flex-basis: auto;
+    padding: 50px;
+    justify-content: space-between;
+}
+.half-height-inside-card{
+    height: 50%;
+}
+.half-height-inside-card img{
+    width:50%;
+}
+#left-item-card{
+    background-color: rgb(240, 219, 240);
+}
+#mid-item-card{
+    background-color: rgb(235, 235, 203);
+}
+#right-item-card{
+    background-color: rgb(183, 193, 223);
+}
+#mid-section{
+    display: flex;
+    justify-content: space-between;
+    padding: 50px;
+    gap: 25px;
+}
+.centered-heading{
+    text-align: center;
+}
+.card-shape{
+    border-radius: 30px;
+    padding: 20px;
+    flex-basis: 100%;
 }
